# ig_repertoire_constructor

./: README  run_vdj_labeler
src/vdj_labeler/: .launch.cpp.swp  .run.sh (2).swp  .test_model.csv.swp  CMakeLists.txt  a  fastq_read_archive.cpp  fastq_read_archive.hpp  launch.cpp  launch.hpp  main.cpp  main_backup.cpp  model.r  plan.txt  run.sh  test_model_backup.csv  vdj_config.cpp  vdj_config.hpp
src/vdj_labeler/model/: .recombination_model.cpp.swp  recombination_model.cpp  recombination_model.hpp
src/vdj_labeler/recombination/: cleaved_gene.cpp  cleaved_gene.hpp  nongenomic_insertion.cpp  nongenomic_insertion.hpp  recombination.cpp  recombination.hpp
src/vdj_labeler/recombination_calculator/: abstract_recombination_calculator.hpp  hc_model_based_recombination_calculator.cpp  hc_model_based_recombination_calculator.hpp
src/vdj_labeler/recombination_estimators/: hc_recombination_estimator.cpp
src/vdj_labeler/recombination_generation/: base_hc_recombination_generator.cpp  base_hc_recombination_generator.hpp  custom_hc_recombination_generator.cpp  custom_hc_recombination_generator.hpp  gene_event_storage_estimator.cpp  gene_event_storage_estimator.hpp  insertion_event_storage.hpp  recombination_event_storage.cpp  recombination_event_storage.hpp  recombination_event_storage_estimator.cpp  recombination_generator.hpp  recombination_storage.cpp  recombination_storage.hpp
src/vdj_labeler/recombination_generation/gene_events_generators/: d_recombination_event_generator.cpp  d_recombination_event_generator.hpp  j_recombination_event_generator.cpp  j_recombination_event_generator.hpp  v_recombination_event_generator.cpp  v_recombination_event_generator.hpp
src/vdj_labeler/recombination_generation/gene_events_generators/shms_calculators/: left_event_shms_calculator.cpp  left_event_shms_calculator.hpp  right_event_shms_calculator.cpp  right_event_shms_calculator.hpp  shm_calculator.hpp  versatile_shms_calculator.cpp  versatile_shms_calculator.hpp
src/vdj_labeler/recombination_generation/gene_events_generators/spewG.c/: shm_calculator.hpp  (+1 more)
src/vdj_labeler/recombination_generation/insertion_events_generators/: insertion_event_generator.hpp  versatile_insertion_event_generator.cpp  versatile_insertion_event_generator.hpp
src/vdj_labeler/test/: blank_model.csv  vdj_labeling.csv  vdj_labeling.fastq
src/vdj_labeler/test/blank_models/: blank_model_genV.csv  blank_model_temp.R  blank_model_temp.csv  delDLeft.csv  delDRight.csv  nohup.out
src/vdj_labeler/vdj_alignments/: alignment_structs.cpp  alignment_structs.hpp  gene_database.cpp  gene_database.hpp  vdj_hits.cpp  vdj_hits.hpp  vdj_hits_storage.hpp  vj_alignment_info.cpp  vj_alignment_info.hpp
src/vdj_labeler/vdj_alignments/aligners/: left_j_tail_aligner.cpp  left_j_tail_aligner.hpp  right_v_tail_aligner.cpp  right_v_tail_aligner.hpp  simple_d_aligner.cpp  simple_d_aligner.hpp
src/vdj_labeler/vdj_alignments/vdj_hits_calculators/: custom_vdj_hits_calculator.cpp  custom_vdj_hits_calculator.hpp  ig_gene_hits_calculator.hpp  info_based_d_hits_calculator.cpp  info_based_d_hits_calculator.hpp  info_based_v_hits_calculator.hpp  info_based_vj_hits_calculator.cpp  info_based_vj_hits_calculator.hpp  vdj_hits_calculator.hpp
(+37 files in other folders)
